--- a/jrssb_formatted/hillclimbing_statsoc.tex
+++ b/jrssb_formatted/hillclimbing_statsoc.tex
@@ -231,7 +231,7 @@ _{\boldsymbol B} \nabla f  =
 \vdots\\
 \frac{\partial f}{\partial \boldsymbol b_p}\\
 \end{array}
-\right );
+\right ) \in \mathbb{R}^p;
 \quad
 _{\boldsymbol B}\nabla^2 f =
 \left (
@@ -241,7 +241,7 @@ _{\boldsymbol B}\nabla^2 f =
 \vdots & \vdots &  \ddots & \vdots \\
 \frac{\partial^2 f}{\partial b_p \partial b_1} & \frac{\partial^2 f}{\partial b_p \partial b_2} & ...  & \frac{\partial^2 f}{\partial b_p^2} \\
 \end{array}
-\right )
+\right ) \in \mathbb{R}^{p \times p}
 \end{equation}
 \end{definition}
 
@@ -331,17 +331,14 @@ Note that because the differentiable space is a local optimality space and is th
                             \end{equation*}
 		}              
               	\STATE{
-			Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
+			Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})$ is
                                \begin{equation*}
-                    	      \frac{\partial \hat{\boldsymbol \beta}(\boldsymbol{\lambda})}{\partial \boldsymbol \lambda}
-                    		= - 
-                    		\left [ \left .
+                    		-  \left . \left [
                     		_{\boldsymbol U^{(k)}}\nabla^2 \left (
                     			 L(\boldsymbol{y}_T, f_{\boldsymbol U^{(k)}\boldsymbol \beta} (\boldsymbol{X}_T))  + 
                     			 \sum\limits_{i=1}^J \lambda_i P_i(\boldsymbol U^{(k)}\boldsymbol \beta)
                     		\right )
-                    		\right |_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
-                    		\right ]^{-1} \left .
+                    		\right ]^{-1}
                     		_{\boldsymbol U^{(k)}}\nabla P(\boldsymbol U^{(k)}\boldsymbol \beta)
                     		\right |_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
                                \end{equation*}
@@ -541,13 +538,13 @@ sgn(\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}))
 
 \subsubsection{Additive Partially Linear Models}\label{sec:additive}
 
-Finally consider an additive partially linear model (APLM) for response $y$ given covariates $\boldsymbol{x} \in \mathbb{R}^p$ and $\boldsymbol{z} \in \mathbb{R}^q$. In this semi-parametric regression example, we assume that $y$ is the sum of $p$ univariate functions and a linear function:
+Finally consider an additive partially linear model (APLM) for response $y$ given covariates $\boldsymbol{x} \in \mathbb{R}^p$ and $\boldsymbol{z} \in \mathbb{R}^q$. For this semi-parametric regression we assume that $y$ is the sum of $p$ univariate functions and a linear function:
 \begin{equation}
 y = \sum_{i=1}^p f_i(x_i) + \boldsymbol{\beta}^\top \boldsymbol z  + \epsilon
 \end{equation}
-As before, we fit the model using least squares. In addition, we induce smoothness in the estimates $\hat{\boldsymbol{\theta}}^{(i)} \in \mathbb{R}^n$ for $f_i$ by penalizing the second-order differences and we induce sparsity in $\hat{\boldsymbol{\beta}}$ by adding a lasso penalty.
+We want to estimate the coefficients $\boldsymbol{\beta}$ and values of the functions $f_i$ at our observations: $\boldsymbol{\theta}^{(i)} \equiv (f_i(x_{i1}), ..., f_i(x_{in}))$. As before the model is fit using least squares. In addition, a smoothness penalty is applied to $\hat{\boldsymbol{\theta}}^{(i)}$ and a lasso penalty is applied to $\hat{\boldsymbol{\beta}}$ in the training criterion.
 
-Let $\boldsymbol{Z}_T \in \mathbb{R}^{|T| \times q}, \boldsymbol{Z}_V \in \mathbb{R}^{|V| \times q}$ be the linear covariates from the training and validation sets; let $\boldsymbol X \in \mathbb{R}^{n \times q}$ be the nonlinear covariates. Define matrices $\boldsymbol{I}_T$ and $\boldsymbol{I}_V$ such that $\boldsymbol I_T \boldsymbol{\theta}^{(i)}$ and $\boldsymbol I_V \boldsymbol{\theta}^{(i)}$ are estimates for $f_i$ at the training and validation inputs, respectively. The joint optimization problem is
+Let $\boldsymbol{Z}_T \in \mathbb{R}^{|T| \times q}, \boldsymbol{Z}_V \in \mathbb{R}^{|V| \times q}$ be the linear covariates from the training and validation sets and $\boldsymbol X \in \mathbb{R}^{n \times q}$ be the nonlinear covariates. Define matrices $\boldsymbol{I}_T$ and $\boldsymbol{I}_V$ such that $\boldsymbol I_T \boldsymbol{\theta}^{(i)}$ and $\boldsymbol I_V \boldsymbol{\theta}^{(i)}$ are estimates for $f_i$ at the training and validation inputs, respectively. The joint optimization problem is
 \begin{equation}
 \begin{array}{c}
 \min_{\boldsymbol\lambda \in \mathbb{R}^{p+1}_{+}} \frac{1}{2}
@@ -573,9 +570,10 @@ Let $\boldsymbol{Z}_T \in \mathbb{R}^{|T| \times q}, \boldsymbol{Z}_V \in \mathb
 
 The matrix $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ gives the second-order differences between the estimates of $f_i$ for unevenly-spaced inputs. Construction of $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ is given in the Appendix. Note that the nonlinear covariates $\boldsymbol X$ from the training and validation sets are incorporated into the matrices $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ in order to estimate $f_i$ at all $\boldsymbol X$ values.
 
-The gradient derivation is given in the Appendix since it follows the same steps as before.
+The formulation in \ref{aplmProblem} is given in a very general form. In the following sections, we will consider special cases of this regression, such as pooling certain $\lambda_i$s and removing the parametric component entirely.
 
-Here we have presented an extremely general form on the training criterion, where there are separate $\lambda_i$ for $\left \| \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \boldsymbol{\theta}^{(i)} \right \|_2^2$. In the following sections, we will consider special cases of this APLM.
+The gradient derivation is given in the Appendix. The logic is the same as the other examples.
+
 
 %\subsubsection{Additive models OLD}\label{sec:additive}
 %Finally, consider modeling response $y$ with an additive model composed of $p$ univariate functions
@@ -861,12 +859,11 @@ for some prespecified tolerance $\delta$. For the results in this manuscript we 
 
 \section{Results: regressions with two penalty parameters}\label{sec:results1}\label{results1}
 
-We ran two simulation studies for this paper. The purpose of this first set of simulations is to compare the performance and efficiency of grid-based and descent-based joint optimization across different regularization methods, namely the elastic net, sparse group lasso, and APLM.
+The purpose of this first set of simulations is to compare the performance and efficiency of grid-based and descent-based joint optimization across different regularization methods, namely the elastic net, sparse group lasso, and APLM.
 
-The regularization parameters were tuned over a training/validation split. We implemented descent-based joint optimization using gradient descent. For both grid search and descent-based joint optimization we fit the model over the training set using the splitting conic solver (SCS) in CVXPY \citep{cvxpy}. We describe the simulation settings below, followed by a discussion of the results.
-%We implemented descent-based joint optimization using two different methods:  gradient descent and accelerated gradient descent with adaptive restarts. 
+The regularization parameters were tuned over a training/validation split. Descent-based joint optimization was implemented using gradient descent. The inner training criterion is solved using the splitting conic solver (SCS) in CVXPY \citep{cvxpy}. The simulation settings are described below, followed by a discussion of the results.
 
-\subsection{Simulations}
+\subsection{Simulation settings}
 \subsubsection{Elastic Net}
 We generated thirty datasets, each consisting of 80 training and 20 validation observations with 250 predictors. The $\boldsymbol x_i$ were marginally distributed $N(\boldsymbol 0,\boldsymbol I)$ with $cor(x_{ij},x_{ik}) = 0.5^{|j-k|}$.
 The response vector $\boldsymbol y$ was generated by
@@ -903,7 +900,7 @@ where $\boldsymbol \beta = (1, 1, 1, 1, 1, 1, 0, ..., 0)$ and $g(\boldsymbol z) 
 
 Both descent-based methods were initialized at $\lambda_1 = \lambda_2 = 10^i$ for $i=-2, -1, 0, 1$. Grid search was performed over a $10 \times 10$ grid from $1e\text{-}6$ to $10$.
 \begin{table}
-\caption{\label{table:validation} Validation error comparisons for simulation studies in Section~\ref{sec:results1}. Variance is provided in parentheses.}
+\caption{\label{table:validation} Validation errors for simulation studies in Section~\ref{sec:results1}. Variance is provided in parentheses.}
 \centering
 \begin{tabular}{| l | l | l | l | }
 \hline
@@ -964,14 +961,14 @@ We first generalize sparse group lasso by replacing the group lasso penalty para
 \end{equation}
 This version increases the number of penalty parameters from two to $M+1$, where $M$ is the number of groups. The additional flexibility allows setting covariate and covariate group effects to zero by different thresholds. Hence un-pooled sparse group lasso may be better at modeling covariate groups with very different distributions.
 
-We ran three experiments with different numbers of covariate groups $M$ and total covariates $p$, as given in Table \ref{table:unpooled}. The simulation settings were similar to the simulation settings and grid search procedure in Section \ref{sec:simulations_sgl}. A separate test set of 200 observations was generated each run. For gradient descent, the $M+1$ regularization parameters were initialized at $1e\text{-}4 \times \boldsymbol 1^\top$, $1e\text{-}3 \times \boldsymbol 1^\top$, and $1e\text{-}2 \times \boldsymbol 1^\top$.
+We ran three experiments with different numbers of covariate groups $M$ and total covariates $p$, as given in Table \ref{table:unpooled}. The simulation settings were similar to the simulation settings and grid search procedure in Section \ref{sec:simulation_sgl}. A separate test set of 200 observations was generated each run. For gradient descent, the $M+1$ regularization parameters were initialized at $1e\text{-}4 \times \boldsymbol 1^\top$, $1e\text{-}3 \times \boldsymbol 1^\top$, and $1e\text{-}2 \times \boldsymbol 1^\top$.
 
 Model performance was assessed using three metrics: test error, $\beta$ error (defined as $\| \boldsymbol \beta - \hat {\boldsymbol \beta} \|_2 ^2$), and the percentage of nonzero coefficients correctly identified among all the true nonzero coefficients. The results show that un-pooled sparse group lasso tuned using gradient descent performed better by all metrics.
 
 Gradient descent was significantly faster in all three settings. In fact, the runtimes for gradient descent did not grow as the number of regularization parameters increased.
 
 \begin{table}
-\caption{\label{table:unpooled} Comparison of models from un-pooled sparse group lasso and sparse group lasso (SGL), tuned using gradient descent and grid search, respectively.}
+\caption{\label{table:unpooled} Un-pooled sparse group lasso and sparse group lasso (SGL) tuned by gradient descent and grid search, respectively.}
 \centering
 \begin{tabular}{| l | l | l | l | l | }
 \hline
@@ -1015,7 +1012,7 @@ Now consider generalizing the APLM criterion in \eqref{aplmProblem} by using the
 \end{equation}
 Since the elastic net tends to perform better when some of the predictors are correlated, we hypothesize that this generalized APLM is well-suited for cases where the linear predictors are correlated. We can test this since descent-based joint optimization makes tuning the regularization parameters computationally tractable.
 
-We used the same simulation settings as those in Section \ref{sec:simulations_aplm}. A separate test set of 200 observations was generated each run. Gradient descent was initialized at $\boldsymbol{\lambda} = 10^i \times \boldsymbol 1_3^\top$ for $i=-4, ..., 1$. We experimented with three nonlinear functions $g:\mathbb{R} \mapsto \mathbb{R}$ of varying levels of smoothness, as given in Table \ref{ref:aplm}.
+We used the same simulation settings as those in Section \ref{sec:simulation_aplm}. A separate test set of 200 observations was generated each run. Gradient descent was initialized at $\boldsymbol{\lambda} = 10^i \times \boldsymbol 1_3^\top$ for $i=-4, ..., 1$. We experimented with three nonlinear functions $g:\mathbb{R} \mapsto \mathbb{R}$ of varying levels of smoothness, as given in Table \ref{ref:aplm}.
 
 In addition to comparing models based on their test error, we measured the error of the fitted linear effects and the nonparametric estimates. These correspond to the $\beta$ error ($||\boldsymbol \beta - \hat {\boldsymbol \beta}||_2^2$) and $\theta$ error ($|| g(\boldsymbol z) - \boldsymbol \theta ||_2^2$), respectively.
 
@@ -1024,7 +1021,7 @@ The results show that the generalized APLM criterion performed better by all thr
 The runtime for tuning the three-parameter regularization problem was slightly longer than tuning the original two-parameter problem with grid search. Nonetheless, the runtime remained reasonable.
 
 \begin{table}
-\caption{\label{ref:aplm} Comparison of the performance of APLM with three penalties (APLM 3) and that with two penalties (APLM 2). The regularization parameters were tuned using gradient descent and grid search, respectively.}
+\caption{\label{ref:aplm} APLM with three penalties (APLM 3) vs. two penalties (APLM 2). Penalty parameters were tuned by gradient descent and grid search, respectively.}
 \centering
 \begin{tabular}{| l | l | l | l | l | }
 \hline
@@ -1058,15 +1055,15 @@ APLM 3 & 0.41 & 4.85 & 4.08 & 54.63 \\
 \subsection{Nonparametric Additive Models}
 
 \begin{table}
-\caption {\label{tab:additive} Comparison of the performance of additive model with three penalty parameters tuned by gradient descent and that with one penalty parameter tuned by grid search. Standard errors are given in parentheses.}
+\caption {\label{tab:additive} Additive model with three penalty parameters (AM 3) vs. one penalty parameter (AM 1). The parameters were tuned by gradient descent and grid search, respectively. Standard errors are given in parentheses.}
 \centering
 \begin{tabular}{| l | l | l | l | }
 \hline
 & Validation Error & Test Error & Runtime (sec) \\
 \hline
-Gradient Descent & 33.97 (1.31) & 38.17 (1.61) & 97.15 \\
+AM 3 & 33.97 (1.31) & 38.17 (1.61) & 97.15 \\
 \hline
-Grid Search & 38.93 (1.57) & 42.84 (1.88) & 23.70 \\
+AM 1 & 38.93 (1.57) & 42.84 (1.88) & 23.70 \\
 \hline
 \end{tabular}
 \end{table}
@@ -1088,11 +1085,11 @@ y=\sum _{i=1}^3 f_i(x_i) + \sigma \epsilon
 \end{equation}
 where $\epsilon \sim N(0, 1)$ and $\sigma$ was chosen such that the signal to noise ratio was 2.
 
-As a baseline, we consider the joint optimization problem with one penalty parameter and tune $\lambda$ by performing grid search over 10 log-spaced values from $1e$-3 to 50. Gradient descent was initialized at $\lambda_1=\lambda_2=\lambda_3=1$. The inner optimization problem for the training set was solved using ECOS \citep{Domahidi2013ecos}.
+For baseline comparison, we fit the model with a single $\lambda$ and tuned it using grid search over 10 log-spaced values from $1e$-3 to 50. Gradient descent was initialized at $\lambda_1=\lambda_2=\lambda_3=1$. The inner optimization problem for the training set was solved using ECOS \citep{Domahidi2013ecos}.
 
-As seen in Table~\ref{tab:additive}, the additive model with three penalty parameters has significantly lower validation error compared to one with a single penalty parameter, which is expected given the larger model space. Furthermore, the additive model with three penalty parameters achieved significantly lower test error. It is interesting to note that gradient descent consistently determined that $f_2$ was the smoothest function; for 27 of the thirty runs, $\hat{\lambda}_2$ was larger than $\hat{\lambda}_1$ and $\hat{\lambda}_3$.
+As seen in Table~\ref{tab:additive}, the additive model with three penalty parameters had significantly lower validation error compared to that with a single penalty parameter. Furthermore, the additive model with three penalty parameters achieved significantly lower error on a separate test set. It is interesting to note that gradient descent consistently determined that $f_2$ was the smoothest function; for 27 of the thirty runs, $\hat{\lambda}_2$ was larger than $\hat{\lambda}_1$ and $\hat{\lambda}_3$.
 
-The runtime for tuning the additive model with three penalty parameters using gradient descent was slower than grid search, but still within a reasonable range. Gradient descent is certainly much faster than performing a three-dimensional grid search for this problem.
+The runtime for tuning the additive model with three penalty parameters using gradient descent was slower than grid search, but still within a reasonable range. Gradient descent would certainly be much faster than a three-dimensional grid search for this problem.
 
 \section{Application to Biological Data}\label{realDataResults}
 Finally, we tested descent-based joint optimization in a real data example. More specifically, we considered the problem of finding predictive genes from gene pathways for Crohn's Disease and Ulcerative Colitis. \citet{simon2013sparse} addressed this problem using the sparse group lasso; we now compare this against applying the un-pooled sparse group lasso, where the regularization parameters were tuned using gradient descent.
@@ -1106,7 +1103,7 @@ Table \ref{colitis} presents the average results from repeating this process ten
 In regards to runtime, we find that descent-based joint optimization for un-pooled sparse group lasso was computationally tractable, even though it required tuning 327 regularization parameters. In fact, it was slightly faster than grid-based joint optimization for sparse group lasso.
 
 \begin{table}
-\caption{\label{colitis} Comparison of predictive genes and genesets of Ulcerative Colitis found by un-pooled sparse group lasso and sparse group lasso (SGL). The variance is given in parenthesis.}
+\caption{\label{colitis} Predictive genes and genesets of Ulcerative Colitis found by un-pooled sparse group lasso vs. sparse group lasso (SGL). Variance is given in parenthesis.}
 \centering
 \begin{tabular}{| l | l | l | l | l | }
 \hline
