--- a/jrssb_formatted/hillclimbing_statsoc.tex
+++ b/jrssb_formatted/hillclimbing_statsoc.tex
@@ -998,7 +998,7 @@ Un-pooled SGL & 0.06 & 15.34 & 0.002 & 48.63 \\
 \end{table}
 
 \subsection{Additive partially linear model with three penalties}
-Now consider generalizing the APLM criterion in \eqref{aplmProblem} by using the elastic net instead of the lasso penalty, as follows:
+Now we test the APLM criterion in \eqref{aplmProblem} with the elastic net penalty instead of the lasso for $\boldsymbol \beta$ as follows:
 \begin{equation}
 \frac{1}{2} \left \|
 \boldsymbol{y}_T
