weird author thing

--- a/jrssb_formatted/hillclimbing_statsoc.tex
+++ b/jrssb_formatted/hillclimbing_statsoc.tex
@@ -59,10 +59,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title[Tuning Parameter Selection]{Tuning Parameter Selection based on Validation-Error Descent}
-\author[Author 1]{Jean Feng}
+\author[Feng and Simon]{Jean Feng}
 \address{Department of Biostatistics, University of Washington, Seattle, USA.}
 \email{jeanfeng@uw.edu}
-\author{Noah Simon}
+\author[Feng and Simon]{Noah Simon}
 \address{Department of Biostatistics, University of Washington, Seattle, USA.}
 \email{noahsimon@uw.edu}
 
