noahs email addr

--- a/jrssb_formatted/hillclimbing_statsoc.tex
+++ b/jrssb_formatted/hillclimbing_statsoc.tex
@@ -64,7 +64,7 @@
 \email{jeanfeng@uw.edu}
 \author[Feng and Simon]{Noah Simon}
 \address{Department of Biostatistics, University of Washington, Seattle, USA.}
-\email{noahsimon@uw.edu}
+\email{nrsimon@uw.edu}
 
 \begin{document}
 
