--- a/jrssb_formatted/hillclimbing_statsoc.tex
+++ b/jrssb_formatted/hillclimbing_statsoc.tex
@@ -686,9 +686,9 @@ Un-pooled SGL & 6.90 (0.24) & 11.48 (0.72) & 43.92 (2.00) & 351.68 \\
 \hline
  & $\beta$ Error & \% Correct Nonzero $\beta$ & Test Error & Runtime (sec) \\
 \hline
-SGL & 2.20 & 10.69 & 0.080 & 162.14 \\
+SGL & 8.30 (0.23) & 9.81 (0.81) & 57.07 (2.10) & 448.92 \\
 \hline
-Un-pooled SGL & 0.06 & 15.34 & 0.002 & 48.63 \\
+Un-pooled SGL & 6.67 (0.33) & 13.19 (0.97) & 46.09 (2.65) & 337.70 \\
 \hline
 \end{tabular}
 \end{table}
