--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -128,7 +128,7 @@ The simplest approach to solving \eqref{jointopt} is brute force: one fits model
 
 In this paper, we propose leveraging the tools of optimization to solve \eqref{jointopt}. We give a gradient descent algorithm for minimizing the validation error over the penalty parameter space. In contrast to an exhaustive ``grid search'', this ``descent-based'' optimization makes use of the smoothness of our validation-error surface. \eqref{jointopt} is generally not convex and thus we may not find the global minimum with a simple descent-based approach. However, in practice we find that simple descent gives competitive solutions.
 
-Various proposals for tuning these ``hyperparameters" has been proposed in the machine learning literature. They generally come in two classes: gradient-free and gradient-based methods. The current gold standard is gradient-free Bayesian optimization \citep{snoek2012practical}, \citep{bergstra2011algorithms}, \citep{hutter2011sequential}. However, these methods are effective in situations with no more than twenty or so hyperparameters. Gradient-based methods can tune many more parameters. One approach is to calculate the derivative either by reverse-mode differentiation through the entire training procedure\citep{maclaurin2015gradient}. Another way is via implicit differentiation of the KKT conditions \citep{larsen1998adaptive}, \citep{bengio2000gradient}, \citep{foo2008efficient}, \citep{lorbert2010descent}. This latter set of methods assume the function is smooth. Our method shows that the gradient can still be calculated via implicit differentiation in the case of non-smooth criterions.
+Various proposals for tuning these ``hyperparameters" has been proposed in the machine learning literature. They generally come in two classes: gradient-free and gradient-based methods. The current gold standard is gradient-free Bayesian optimization \citep{snoek2012practical}, \citep{bergstra2011algorithms}, \citep{hutter2011sequential}. However, these methods are effective in situations with no more than twenty or so hyperparameters. Gradient-based methods can tune many more parameters. One approach is to calculate the derivative either by reverse-mode differentiation through the entire training procedure \citep{maclaurin2015gradient}. Another way is via implicit differentiation of the KKT conditions \citep{larsen1998adaptive}, \citep{bengio2000gradient}, \citep{foo2008efficient}, \citep{lorbert2010descent}. This latter set of methods assume the function is smooth. Our method shows that the gradient can still be calculated via implicit differentiation in the case of non-smooth criterions.
 
 We compare our approach to grid search and gradient-free methods in simulation studies. Our method has superior performance in situations with many (20+) penalty parameters and is efficient even for regressions with hundreds of penalty parameters. We use this method to analyze regularization methods that were previously computationally intractable. Through this, we discover that a variant of sparse group lasso with many more penalty parameters can significantly decrease error and produce more meaningful models.
 
@@ -139,9 +139,9 @@ Updates to the sections
 \end{bf}
 \begin{itemize}
 \item{Section 2: remove ridge regression cause people might know it already? Add a discussion on the efficiency of the method for nonsmooth criterion. In the case of smooth criterions, the inverse of the Hessian is very expensive to calculate. For us, the inverse of the Hessian is cheap since the Hessian is extremely sparse.}
-\item{Section 3: 2 - 5? penalty parameters - should we think about putting APLM with 3 penalties or Nonparametric additive model with 3 covariates?}
-\item{Section 4: 30 - 100 penalty parameters - one example or do we add an example on nonparametric additive model with 30 covariates penalized by sparsity (L1 trendfiltering?) or sparsity-smoothness (basis function approach)?}
-\item{Section 6: Discussion of overfitting - are we overfitting by adding so many new degrees of freedom? Research TBD.}
+\item{Section 3: Have simulation studies with 2 - 5? penalty parameters comparing Bayesian Opt, Gradient Descent, Grid Search (if possible). We will need to discuss how Bayesian Opt is a bit weird to compare -- it doesn't require that many function evaluations, but requires time to update the Gaussian prior and also can't use warmstarts. Should we think about putting APLM with 3 penalties or Nonparametric additive model with 3 covariates?}
+\item{Section 4: Have simulation studies with 20 - 100 penalty parameters? Should we just have the one group lasso example or should we add a second example? Perhaps we could have a nonparametric additive model with 30 covariates penalized by L1 trendfiltering or by sparsity-smoothness (basis function approach).}
+\item{Section 6: We should add a discussion of the possibility of overfitting and how we want to do research on what happens when you add more parameters to tune via CV.}
 \end{itemize}
 
 \section{Descent-based Joint Optimization}\label{defineDescJointOpt}
