--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -277,4 +277,14 @@
   year={2008}
 }
 
+@article{nelder1965simplex,
+  title={A simplex method for function minimization},
+  author={Nelder, John A and Mead, Roger},
+  journal={The computer journal},
+  volume={7},
+  number={4},
+  pages={308--313},
+  year={1965},
+  publisher={Br Computer Soc}
+}
 
